tests/e2e/semantics/if_scope_joint8.error
Error: syntax error in story at line 4, column 12

4|    newCount = originalCount + 1
                 ^^^^^^^^^^^^^

E0101: Variable `originalCount` has not been defined.
