tests/e2e/semantics/if_scope_joint8.story
if 0
	originalCount = 0

newCount = originalCount + 1
